--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700;800&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
-    <title>Reptilez Cycling Club</title>
+    <title>D&R Reptilez Sports</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
