Added function for the meta page

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Reptilez Cycling Club - Exploring Trails, Building Community"
+      content="D&R Reptilez Sports is a premier amateur cycling team based in Tarlac and Pangasinan, dedicated to youth development and competitive racing. We nurture young riders through structured training that builds both performance and good character. Our mission is to become a model club that inspires the next generation of Filipino cyclists."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
