--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,12 @@
 <html class="dark" lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- Favicon - Multiple formats to override default React favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/rcc3.png?v=2" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/rcc3.png?v=2" />
-    <link rel="shortcut icon" type="image/png" href="/rcc3.png?v=2" />
-    <link rel="apple-touch-icon" href="/rcc3.png?v=2" />
-    <!-- Explicitly override favicon.ico -->
-    <link rel="icon" type="image/x-icon" href="/rcc3.png?v=2" />
+    <!-- Favicon - Using existing properly sized favicon files -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
